--- a/old.html
+++ b/old.html
@@ -3,17 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Dallas Hall Recipe</title>
-    <meta name="description" content="Fast, easy, cheap, and delicious chicken chili recipe!">
-    <link rel="stylesheet" href="css_reset.css">
-    <script type="text/javascript" src="external_javascript_example.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-12345678-9', 'auto');
-      ga('send', 'pageview');
-    </script>
   </head>
   <body>
     <header>
@@ -54,9 +43,9 @@
     </section>
     <section id="reviews">
       <h2>Reviews</h2>
-      <form id="review-form" class="" action="/reviews" method="post">
-        <label for="name">Reviewer Name</label>
-        <input type="text" name="name" id="name" value="">
+      <form class="" action="/reviews" method="post">
+        <label for="reviewer-name">Reviewer Name</label>
+        <input type="text" name="reviewer-name" id="reviewer-name" value="">
 
         <label for="rating">Rate this Recipe</label>
         1<input type="radio" name="rating" value="1">
@@ -65,8 +54,8 @@
         4<input type="radio" name="rating" value="4">
         5<input type="radio" name="rating" value="5">
 
-        <label for="expertise">Cooking Expertise</label>
-        <select class="" name="expertise" id="expertise">
+        <label for="cooking-expertise">Cooking Expertise</label>
+        <select class="" name="cooking-expertise" id="cooking-expertise">
           <option value="select" selected disabled>--select--</option>
           <option value="sometimes">Sometimes Cook</option>
           <option value="everyday">Cook Everyday</option>
@@ -74,9 +63,9 @@
           <option value="pro">Pro Chef</option>
         </select>
 
-        <label id="review" for="review">Review:<textarea name="review" rows="8" cols="80"></textarea></label>
+        <label for="review">Review:<textarea name="review" rows="8" cols="80"></textarea></label>
 
-        <input type="submit" value="submit review">
+        <input type="submit" value="submit">
       </form>
     </section>
     <footer>
