--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dallas Hall Recipe</title>
     <meta name="description" content="Fast, easy, cheap, and delicious chicken chili recipe!">
     <link rel="stylesheet" href="css_reset.css">
+    <link rel="stylesheet" href="dallas-recipe.css">
     <script type="text/javascript" src="external_javascript_example.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -17,7 +18,7 @@
   </head>
   <body>
     <header>
-      <img width="50" height="auto" src="https://p5.zdassets.com/hc/settings_assets/949671/200252358/ytySguzPxy92CMwTwD4fxg-logo-emblem-red.png"/>
+      <img src="https://p5.zdassets.com/hc/settings_assets/949671/200252358/ytySguzPxy92CMwTwD4fxg-logo-emblem-red.png"/>
       <ul>
         <li><a href="#description">Description</a></li>
         <li><a href="#ingredients">Ingredients</a></li>
@@ -27,7 +28,7 @@
 
     <aside>
       <h2 id="ingredients">Ingredients</h2>
-      <ul>
+      <ul class="ingredients-list">
         <li>2 Grilled chicken breasts (shredded)</li>
         <li>Seasonings</li>
         <li>beans</li>
