--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Dallas Hall Recipe</title>
     <meta name="description" content="Fast, easy, cheap, and delicious chicken chili recipe!">
-    <link rel="stylesheet" href="css_reset.css">
+    <link rel="stylesheet" href="css_custom_reset.css">
+    <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="dallas-recipe.css">
     <script type="text/javascript" src="external_javascript_example.js"></script>
     <script>
@@ -17,16 +18,18 @@
     </script>
   </head>
   <body>
-    <header>
+    <header class="clearfix">
       <img src="https://p5.zdassets.com/hc/settings_assets/949671/200252358/ytySguzPxy92CMwTwD4fxg-logo-emblem-red.png"/>
-      <ul>
-        <li><a href="#description">Description</a></li>
-        <li><a href="#ingredients">Ingredients</a></li>
-        <li><a href="#directions">Directions</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="#description">Description</a></li>
+          <li><a href="#ingredients">Ingredients</a></li>
+          <li><a href="#directions">Directions</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <aside>
+    <aside class="col col-1-3">
       <h2 id="ingredients">Ingredients</h2>
       <ul class="ingredients-list">
         <li>2 Grilled chicken breasts (shredded)</li>
@@ -37,7 +40,7 @@
       </ul>
     </aside>
 
-    <section>
+    <section id="main" class="col col-2-3">
       <h1>Grilled Chicken Chili</h1>
       <figure>
         <img width="400" height="auto" src="http://foodnetwork.sndimg.com/content/dam/images/food/fullset/2009/4/5/0/IG1C03_27660_s4x3.jpg.rend.sniipadlarge.jpeg" />
@@ -52,33 +55,32 @@
         <li>Throw everything in the pot.</li>
         <li>Cook it 'til its done.</li>
       </ol>
-    </section>
-    <section id="reviews">
-      <h2>Reviews</h2>
-      <form id="review-form" class="" action="/reviews" method="post">
-        <label for="name">Reviewer Name</label>
-        <input type="text" name="name" id="name" value="">
 
-        <label for="rating">Rate this Recipe</label>
-        1<input type="radio" name="rating" value="1">
-        2<input type="radio" name="rating" value="2">
-        3<input type="radio" name="rating" value="3">
-        4<input type="radio" name="rating" value="4">
-        5<input type="radio" name="rating" value="5">
+      <section id="reviews">
+        <h2>Reviews</h2>
+        <form id="review-form" class="" action="/reviews" method="post">
+          <label for="name">Reviewer Name</label>
+          <input type="text" name="name" id="name" value="">
 
-        <label for="expertise">Cooking Expertise</label>
-        <select class="" name="expertise" id="expertise">
-          <option value="select" selected disabled>--select--</option>
-          <option value="sometimes">Sometimes Cook</option>
-          <option value="everyday">Cook Everyday</option>
-          <option value="hobby">Cook as a Hobby</option>
-          <option value="pro">Pro Chef</option>
-        </select>
+          1<input type="radio" name="rating" value="1">
+          2<input type="radio" name="rating" value="2">
+          3<input type="radio" name="rating" value="3">
+          4<input type="radio" name="rating" value="4">
+          5<input type="radio" name="rating" value="5">
 
-        <label id="review" for="review">Review:<textarea name="review" rows="8" cols="80"></textarea></label>
+          <select class="" name="expertise" id="expertise">
+            <option value="select" selected disabled>--select--</option>
+            <option value="sometimes">Sometimes Cook</option>
+            <option value="everyday">Cook Everyday</option>
+            <option value="hobby">Cook as a Hobby</option>
+            <option value="pro">Pro Chef</option>
+          </select>
 
-        <input type="submit" value="submit review">
-      </form>
+          <label id="review" for="review">Review:<textarea name="review" rows="8" cols="80"></textarea></label>
+
+          <input type="submit" value="submit review">
+        </form>
+      </section>
     </section>
     <footer>
       <p>
